fix size overflow

--- a/src/scss/components/_discover-card.scss
+++ b/src/scss/components/_discover-card.scss
@@ -24,7 +24,7 @@
       margin: $discover-card-margin-size;
       width: calc(100% / 3 - $discover-card-margin-size-double);
       background-position: center;
-      background-size: auto;
+      background-size: 100% auto;
       background-repeat: no-repeat;
       min-height: 500px;
 
